[gd_scene load_steps=10 format=2]

[ext_resource path="res://textures/player/main_character_4.png" type="Texture" id=1]
[ext_resource path="res://player/PlayerBodyPhysics.gd" type="Script" id=2]
[ext_resource path="res://textures/player/main_character_1.png" type="Texture" id=3]
[ext_resource path="res://textures/player/main_character_3.png" type="Texture" id=4]
[ext_resource path="res://textures/player/main_character_2.png" type="Texture" id=5]
[ext_resource path="res://ui/labels/SmallLabel.tscn" type="PackedScene" id=6]
[ext_resource path="res://player/GUI.gd" type="Script" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "moving",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[node name="PlayerBodyPhysics" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="GUI" type="Control" parent="."]
margin_left = -288.0
margin_top = -162.0
margin_right = 288.0
margin_bottom = 162.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" parent="GUI" instance=ExtResource( 6 )]
margin_right = 964.0
margin_bottom = 324.0

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.3, 0 )
scale = Vector2( 2.4, 2.5 )
frames = SubResource( 1 )
animation = "moving"
frame = 3
playing = true

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
scale = Vector2( 0.6, 1 )
shape = SubResource( 2 )

[node name="PlayerCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.3, 0.3 )
smoothing_speed = 6.0

[node name="StaminaCostTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="StaminaRegenTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="PowerRegenTimer" type="Timer" parent="."]
one_shot = true

[node name="DodgeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="StaminaCostTimer" to="." method="_stamina_cost_timer"]
[connection signal="timeout" from="StaminaRegenTimer" to="." method="_stamina_regen_timer"]
[connection signal="timeout" from="PowerRegenTimer" to="." method="_power_regen_timer"]
